增加统计功能

--- a/src/main/webapp/html/health/lababa.html
+++ b/src/main/webapp/html/health/lababa.html
@@ -28,7 +28,7 @@
 		</header>
 		<nav class="mui-bar mui-bar-tab ">
 			<a class="mui-tab-item" href="#Popover_0">宝宝健康</a>
-			<a class="mui-tab-item" href="#Popover_1">我</a>
+			<a class="mui-tab-item" href="#Popover_1">统计</a>
 		</nav>
 		<div class="mui-content" >
 			<div class="mui-content-padded" v-if="showLababaForm"  >				
@@ -89,7 +89,7 @@
 		<div id="Popover_1" class="mui-popover mui-bar-popover">
 			<div class="mui-popover-arrow"></div>
 			<ul class="mui-table-view">
-				<li class="mui-table-view-cell"><a href="#">我</a>
+				<li class="mui-table-view-cell"><a @click="openStatis">统计</a>
 				</li>
 			</ul>
 		</div>
